# Ash

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
resources/FlightHelmet/glTF-KTX-BasisU/: FlightHelmet_Materials_GlassPlasticMat_BaseColor.ktx2  FlightHelmet_Materials_GlassPlasticMat_Normal.ktx2  FlightHelmet_Materials_GlassPlasticMat_OcclusionRoughMetal.ktx2  FlightHelmet_Materials_LeatherPartsMat_BaseColor.ktx2  FlightHelmet_Materials_LeatherPartsMat_Normal.ktx2  FlightHelmet_Materials_LeatherPartsMat_OcclusionRoughMetal.ktx2  FlightHelmet_Materials_LensesMat_BaseColor.ktx2  FlightHelmet_Materials_LensesMat_Normal.ktx2  FlightHelmet_Materials_LensesMat_OcclusionRoughMetal.ktx2  FlightHelmet_Materials_MetalPartsMat_BaseColor.ktx2  FlightHelmet_Materials_MetalPartsMat_Normal.ktx2  FlightHelmet_Materials_MetalPartsMat_OcclusionRoughMetal.ktx2  FlightHelmet_Materials_RubberWoodMat_BaseColor.ktx2  FlightHelmet_Materials_RubberWoodMat_Normal.ktx2  FlightHelmet_Materials_RubberWoodMat_OcclusionRoughMetal.ktx2
samples/: CMakeLists.txt  empty_app.cpp  hello_camera.cpp  hello_cube.cpp  hello_gltf.cpp  hello_renderer.cpp  hello_triangle.cpp  hello_window.cpp
shaders/: forward.frag  forward.vert  shadow.frag  shadow.vert
shaders/mesh/: constants.glsl  lighting.glsl  simple_lit.frag  simple_lit.vert  unlit.frag  unlit.vert
src/: app.cpp  app.h
src/device/: input_manager.h
src/editor/: CMakeLists.txt  editor.cpp
src/runtime/: CMakeLists.txt  app.cpp  app.h  ash.h
src/runtime/app/: app.cpp  app.h  app_subsystem.cpp  app_subsystem.h
src/runtime/core/: file.h  file_utils.cpp  file_utils.h  fps_counter.h  math.h  slot_map_ptr.h
src/runtime/gfx/: buffer_pool.cpp  buffer_pool.h  buffer_ring.cpp  buffer_ring.h  device.cpp  device.h  imgui.cpp  imgui.h  storage_buffer.cpp  storage_buffer.h
src/runtime/input/: input_manager.cpp  input_manager.h  input_types.h
src/runtime/renderer/: render_list.h  render_object.h  render_types.h  renderer.cpp  renderer.h
src/runtime/renderer/passes/: forward_pass.cpp  forward_pass.h  shadow_pass.cpp  shadow_pass.h
src/runtime/renderer/renderers/: forward_renderer.cpp  forward_renderer.h
src/runtime/resource/: gltf_loader.cpp  gltf_loader.h  material_resource.h  mesh_resource.h  resource.h  texture_resource.h
src/runtime/world/: component.h  game_object.cpp  game_object.h  world.cpp  world.h
src/runtime/world/components/: camera_component.cpp  camera_component.h  camera_controller_component.cpp  camera_controller_component.h  light_component.cpp  light_component.h  mesh_component.cpp  mesh_component.h  transform_component.cpp  transform_component.h
src/utils/: fps_counter.h  stl_utils.h
src/world/: component.h  game_object.cpp  game_object.h  world.cpp  world.h
src/world/components/: camera_component.cpp  camera_component.h  camera_controller_component.cpp  camera_controller_component.h  transform_component.cpp  transform_component.h
tests/: CMakeLists.txt  app_test.cpp  resource_test.cpp  world_test.cpp
